--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>-->
 
     <div id="header">
+        <h1>Luciana Leaño Guerrero</h1>
         <div id="nav">
             <ul>
                 <li>Enlace 1</li>
@@ -27,6 +28,7 @@
     </div>
     <div id="aside-left">ASIDE LEFT</div>
     <div id="main">
+        
         <div id="article">
             <div id="section-1">Lorem ipsum dolor sit amet, <span style="color: blue;">consectetur</span> adipisicing elit. Assumenda, sint earum. Explicabo laborum voluptas corporis. At rerum <span style="color: blue;">facere</span> eveniet vel quis animi quia esse, error cumque, modi delectus odit ipsum.</div>
             <div id="section-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span style="color: blue;">Assumenda</span> praesentium quas doloribus quis quisquam molestiae <span style="color: blue;">aliquid</span> id corrupti dolorum dolore voluptates laudantium est totam odit, ad iure debitis deleniti adipisci?</div>
